--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,41 @@
     "version": "0.2.2",
     "description": "A taxonomy utility for WordPress.",
     "type": "library",
-    "homepage": "https://github.com/manovotny/wp-taxonomy-util/",
-    "license": "GPL-3.0+"
+    "homepage": "https://github.com/manovotny/wp-taxonomy-util",
+    "authors": [
+        {
+            "name": "Michael Novotny",
+            "email": "manovotny@gmail.com",
+            "homepage": "http://manovotny.com",
+            "role": "Developer"
+        }
+    ],
+    "license": "GPL-3.0+",
+    "keywords": [
+        "taxonomy",
+        "utility",
+        "wordpress"
+    ],
+    "require": {
+
+    },
+    "require-dev": {
+        "manovotny/wp-phpunit-helpers": "0.1.0",
+        "phpunit/phpunit": "4.1.*"
+    },
+    "autoload": {
+        "classmap": [
+            "src"
+        ],
+        "files": [
+            "wp-taxonomy-util.php"
+        ]
+    },
+    "autoload-dev": {
+        "classmap": [
+            "vendor/phpunit",
+            "vendor/sebastian",
+            "vendor/symfony"
+        ]
+    }
 }
